refactor(core): 优化 TransRepositoryFactory 泛型，移除 rawtypes 抑制
将仓库映射表 key 调整为擦除后的 Class<?>，使 register 无需转型即可编译，
仅保留 getTransRepository 一处不可避免（异构容器类型擦除）的 unchecked 抑制。
同时提交工作区其余源码改动。